--- a/OwlTIME/app/src/main/res/layout/activity_navigation.xml
+++ b/OwlTIME/app/src/main/res/layout/activity_navigation.xml
@@ -7,11 +7,14 @@
     android:layout_height="match_parent"
     tools:context=".Navigation">
 
-    <FrameLayout
-        android:id="@+id/containerFrame"
+    <include
+        layout="@layout/content_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        android:layout_marginBottom="60dp"
+        app:layout_constraintBottom_toTopOf="@+id/nav_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
