--- a/OwlTIME/app/src/main/res/layout/item_list.xml
+++ b/OwlTIME/app/src/main/res/layout/item_list.xml
@@ -3,19 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:focusable="true"
-    android:clickable="true"
-    android:layout_margin="8dp"
-    android:background="?android:attr/selectableItemBackground"
-    >
+    android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:paddingHorizontal="@dimen/activity_horizontal_margin"
-            android:paddingVertical="@dimen/activity_vertical_margin">
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/name"
@@ -23,7 +16,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Looks good" />
+                android:text="Looks good"
+                android:paddingHorizontal="@dimen/activity_horizontal_margin"
+                android:paddingVertical="@dimen/activity_vertical_margin" />
 
             <TextView
                 android:id="@+id/final_score"
@@ -32,7 +27,12 @@
                 android:layout_weight="1"
                 android:gravity="end"
                 android:text="Looks good"
-                android:textColor="@color/secondaryColor"/>
+                android:textColor="@color/secondaryColor"
+                android:paddingHorizontal="@dimen/activity_horizontal_margin"
+                android:paddingVertical="@dimen/activity_vertical_margin"
+                android:focusable="true"
+                android:clickable="true"
+                android:background="?android:attr/selectableItemBackground"/>
 
         </LinearLayout>
 
