--- a/OwlTIME/app/src/main/res/layout/fragment_subject.xml
+++ b/OwlTIME/app/src/main/res/layout/fragment_subject.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SubjectFragment"
-    android:layout_marginHorizontal="@dimen/activity_horizontal_margin">
+    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+    android:layout_marginTop="@dimen/activity_vertical_margin">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/refresh"
