--- a/OwlTIME/app/src/main/res/layout/fragment_account.xml
+++ b/OwlTIME/app/src/main/res/layout/fragment_account.xml
@@ -42,6 +42,7 @@
                 android:layout_marginTop="20dp"
                 android:hint="@string/firstName"
                 app:errorEnabled="true"
+                app:startIconDrawable="@drawable/ic_round_account_circle_24px"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -59,6 +60,7 @@
                 android:layout_marginTop="20dp"
                 android:hint="@string/lastName"
                 app:errorEnabled="true"
+                app:startIconDrawable="@drawable/ic_round_how_to_reg_24px"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -76,6 +78,7 @@
                 android:layout_marginTop="20dp"
                 android:hint="@string/email"
                 app:errorEnabled="true"
+                app:startIconDrawable="@drawable/ic_round_alternate_email"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -94,6 +97,7 @@
                 android:hint="@string/password"
                 app:errorEnabled="true"
                 app:endIconMode="password_toggle"
+                app:startIconDrawable="@drawable/ic_https_black_24dp"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
