--- a/OwlTIME/app/src/main/res/values/styles.xml
+++ b/OwlTIME/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/primaryColor</item>
         <item name="colorPrimaryDark">@color/primaryDarkColor</item>
         <item name="colorAccent">@color/secondaryColor</item>
+        <item name="android:colorBackground">@color/background</item>
     </style>
 
 </resources>
