--- a/OwlTIME/app/src/main/res/values/styles.xml
+++ b/OwlTIME/app/src/main/res/values/styles.xml
@@ -9,4 +9,9 @@
         <item name="android:colorBackground">@color/background</item>
     </style>
 
+    <style name="Theme_Dialog" parent="Theme.MaterialComponents.Dialog.Alert">
+        <item name="android:background">@color/background</item>
+        <item name="colorPrimary">@color/primaryColor</item>
+    </style>
+
 </resources>
