--- a/OwlTIME/app/src/main/res/values/colors.xml
+++ b/OwlTIME/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="error">#f7444e</color>
     <color name="errorLight">#ff7a7a</color>
     <color name="errorDark">#bd0026</color>
+    <color name="back">#ffffff</color>
 </resources>
