--- a/OwlTIME/app/src/main/res/layout/item_event.xml
+++ b/OwlTIME/app/src/main/res/layout/item_event.xml
@@ -43,10 +43,7 @@
                 android:text="Looks good"
                 android:textColor="@color/secondaryColor"
                 android:paddingHorizontal="@dimen/activity_horizontal_margin"
-                android:paddingVertical="@dimen/activity_vertical_margin"
-                android:focusable="true"
-                android:clickable="true"
-                android:background="?android:attr/selectableItemBackground"/>
+                android:paddingVertical="@dimen/activity_vertical_margin" />
 
         </LinearLayout>
 
